syntax = "proto3";

package api.helloworld1.v1;

import "google/api/annotations.proto";

option go_package = "helloworld/api/helloworld1/v1;v1";
option java_multiple_files = true;
option java_package = "api.helloworld1.v1";

service Student {
	rpc CreateStudent (CreateStudentRequest) returns (CreateStudentReply);
	rpc UpdateStudent (UpdateStudentRequest) returns (UpdateStudentReply);
	rpc DeleteStudent (DeleteStudentRequest) returns (DeleteStudentReply);
	rpc GetStudent (GetStudentRequest) returns (GetStudentReply){
		option (google.api.http) = {
			get: "/student/{id}"
		};
	};
	rpc ListStudent (ListStudentRequest) returns (ListStudentReply){
		option (google.api.http) = {
			get: "/students"
		};
	};

	rpc Hello (HelloReq) returns (HelloResp){
		   option (google.api.http) = {
				   get: "/hello/{name}",
				   additional_bindings {
						 post: "/hello/{id}/sayhello/{sayname}",
						 body: "*",
					 }
			 };
	}

}
message HelloReq {
	string name = 1;
	string id = 2;
	string sayname = 3;
}
message HelloResp {
	string message = 1;
	string text = 2;
}

message CreateStudentRequest {}
message CreateStudentReply {}

message UpdateStudentRequest {}
message UpdateStudentReply {}

message DeleteStudentRequest {}
message DeleteStudentReply {}

message GetStudentRequest {
	int32 id = 1;
}
message GetStudentReply {
	string name = 1;
	int32 status = 2;
	int32 id =3 ;
}

message ListStudentRequest {
	string name = 1;
	int32 page = 2;
	int32 page_size = 3;
}

message ListStudentReply {
	message Stu {
		int32  id = 1;
		string name = 2;
		string info = 3;
		string createdAt = 4;
	}
	repeated Stu students = 1;
}